--- a/html/index.html
+++ b/html/index.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
+	<img id="main-page-image" src="images/mtns.jpeg" alt="">
 
 	<h1>Bryan Stebbing</h1>
 
